--- a/portafolio/home/templates/home/home_page.html
+++ b/portafolio/home/templates/home/home_page.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-{% load static wagtailuserbar %}
+{% load static wagtailuserbar wagtailimages_tags %}
 <html lang="es">
 
 <head>
@@ -28,13 +28,21 @@
 <body id="page-top">
 	{% wagtailuserbar %}
 	<!-- Navigation-->
-	<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="sideNav">
 		<a class="navbar-brand js-scroll-trigger" href="#page-top">
-			<span class="d-block d-lg-none">Clarence Taylor</span>
+			<span class="d-block d-lg-none">{{ self.name }}</span>
+			{% image self.photo original as photo %}
+			{% if photo %}
+			<span class="d-none d-lg-block">
+				<img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="{{ photo.url }}"
+					alt="{{ photo.alt }}" />
+			</span>
+			{% else %}
 			<span class="d-none d-lg-block">
 				<img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="{% static 'assets/img/profile.png' %}"
-					alt="..." />
+					alt="{{ self.name }}" />
 			</span>
+			{% endif %}
 		</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 			aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
@@ -56,16 +64,18 @@
 		<section class="resume-section" id="about">
 			<div class="resume-section-content">
 				<h1 class="mb-0">
-					Clarence
-					<span class="text-primary">Taylor</span>
+					{{ self.name }}
+					<span class="text-primary">{% if self.last_name %} {{ self.last_name }} {% endif %}</span>
 				</h1>
 				<div class="subheading mb-5">
-					3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-					<a href="!#">name@email.com</a>
+					{% if self.address %}
+						{{ self.address }}
+					{% else %}
+						3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
+					{% endif %}
+					<a href="!#">{{ self.email }}</a>
 				</div>
-				<p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for
-					high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to
-					further the overall value proposition.</p>
+				<p class="lead mb-5">{{ self.about_me }}</p>
 				<div class="social-icons">
 					<a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
 					<a class="social-icon" href="#"><i class="fab fa-github"></i></a>
