refactor: Agregué otra imagen de perfil.

--- a/portafolio/home/templates/home/home_page.html
+++ b/portafolio/home/templates/home/home_page.html
@@ -40,7 +40,7 @@
 			</span>
 			{% else %}
 			<span class="d-none d-lg-block">
-				<img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="{% static 'assets/img/profile.png' %}"
+				<img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="{% static 'assets/img/yo2.jpg' %}"
 					alt="{{ self.name }}" />
 			</span>
 			{% endif %}
