fix: Link a mi correo electrónico.

--- a/portafolio/home/templates/home/home_page.html
+++ b/portafolio/home/templates/home/home_page.html
@@ -74,7 +74,7 @@
 					{% else %}
 						3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
 					{% endif %}
-					<a href="!#">{{ self.email }}</a>
+					<a href="#">{{ self.email }}</a>
 				</div>
                 <div class="mb-5"> {{ self.about_me|richtext }} </div>
 				<div class="social-icons">
