--- a/portafolio/templates/404.html
+++ b/portafolio/templates/404.html
@@ -1,9 +1,15 @@
-{% extends "base.html" %}
-
-{% block body_class %}template-404{% endblock %}
+{% extends "home/home_page.html" %}
 
 {% block content %}
-    <h1>Page not found</h1>
+<div class="row">
+    <div class="col-sm-12">
+        <article class="card">
+            <div class="card-body">
+                <h1 class="card-title">Page not found</h1>
 
-    <h2>Sorry, this page could not be found.</h2>
+                <h2>Sorry, this page could not be found.</h2>
+            </div>
+        </article>
+    </div>
+</div>
 {% endblock %}
